@@ -7,15 +7,17 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class StudentListUlyulyuService {
     private final StudentRepository studentRepository;
 
-    public List<StudentDTO> getAllStudentFullNamesUUUU() {
+    public List<StudentDTO> getAllStudentFullNamesExceptAuthorUUUU(Long authorUserId) {
         return studentRepository.findAll().stream()
+                .filter((student) -> !student.getUser().getId().equals(authorUserId))
                 .map(StudentToStudentDTOConverter::convertStudentToStudentDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
